k8s/base/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: argo-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: argo-demo
  template:
    metadata:
      labels:
        app: argo-demo
    spec:
      containers:
        - name: argo-demo
          image: argo-demo
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  revisionHistoryLimit: 3
  strategy: {}
