k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: argo-demo-active
spec:
  selector:
    app: argo-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: argo-demo-preview
spec:
  selector:
    app: argo-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
