k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-demo-active
spec:
  rules:
    - host: *
      http:
        paths:
          - backend:
              serviceName: argo-demo-active
              servicePort: 8080
